# arborium

./: .gitignore  CNAME  Cargo.toml  DEVELOP.md  GRAMMARS.toml  LICENSES.md  PUBLISH.md  README.md  WASMPLUG.md  flake.nix  generate.md  package-lock.json  warm-cdn-cache.sh
.cargo/: config.toml
.github/docker/: Dockerfile.plugin-builder
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  release.yml
component-demo/: browser-demo.html  host.mjs  test-injection.mjs  test-plugin.mjs
crates/arborium/: Cargo.toml
crates/arborium-ada/: build.rs  info.toml
crates/arborium-agda/: build.rs  info.toml
crates/arborium-asciidoc/: Cargo.toml  build.rs  info.toml
crates/arborium-asciidoc_inline/: Cargo.toml  build.rs
crates/arborium-asm/: build.rs  info.toml
crates/arborium-awk/: build.rs  info.toml
crates/arborium-bash/: build.rs  info.toml
crates/arborium-batch/: build.rs  info.toml
crates/arborium-c/: build.rs  info.toml
crates/arborium-c-sharp/: build.rs  info.toml
crates/arborium-caddy/: build.rs  info.toml
crates/arborium-capnp/: build.rs  info.toml
crates/arborium-cli/: Cargo.toml  README.md
crates/arborium-clojure/: build.rs  info.toml
crates/arborium-cmake/: build.rs  info.toml
crates/arborium-commonlisp/: build.rs  info.toml
crates/arborium-cpp/: build.rs  info.toml
crates/arborium-css/: build.rs  info.toml
crates/arborium-d/: build.rs  info.toml
crates/arborium-dart/: build.rs  info.toml
crates/arborium-devicetree/: build.rs  info.toml
crates/arborium-diff/: build.rs  info.toml
crates/arborium-dockerfile/: build.rs  info.toml
crates/arborium-docsrs-demo/: Cargo.toml  README.md  arborium-header.html
crates/arborium-dot/: build.rs  info.toml
crates/arborium-elisp/: build.rs  info.toml
crates/arborium-elixir/: build.rs  info.toml
crates/arborium-elm/: build.rs  info.toml
crates/arborium-erlang/: build.rs  info.toml
crates/arborium-fish/: build.rs  info.toml
crates/arborium-fsharp/: build.rs  info.toml
crates/arborium-gleam/: build.rs  info.toml
crates/arborium-glsl/: build.rs  info.toml
crates/arborium-go/: build.rs  info.toml
crates/arborium-graphql/: build.rs  info.toml
crates/arborium-haskell/: build.rs  info.toml
crates/arborium-hcl/: build.rs  info.toml
crates/arborium-highlight/: Cargo.stpl.toml  Cargo.toml
crates/arborium-hlsl/: build.rs  info.toml
crates/arborium-host/: Cargo.toml
crates/arborium-html/: build.rs  info.toml
crates/arborium-html-plugin/: Cargo.toml
crates/arborium-idris/: build.rs  info.toml
crates/arborium-ini/: build.rs  info.toml
crates/arborium-java/: build.rs  info.toml
crates/arborium-javascript/: build.rs  info.toml
crates/arborium-javascript-plugin/: Cargo.toml
crates/arborium-jinja2/: build.rs  info.toml
crates/arborium-jq/: build.rs  info.toml
crates/arborium-json/: build.rs  info.toml
crates/arborium-julia/: build.rs  info.toml
crates/arborium-kdl/: build.rs  info.toml
crates/arborium-kotlin/: Cargo.toml  build.rs  info.toml
crates/arborium-lean/: build.rs  info.toml
crates/arborium-lua/: build.rs  info.toml
crates/arborium-markdown/: info.toml
crates/arborium-markdown-inline/: Cargo.toml  build.rs
crates/arborium-matlab/: build.rs  info.toml
crates/arborium-mdbook/: Cargo.toml
crates/arborium-meson/: build.rs  info.toml
crates/arborium-nginx/: build.rs  info.toml
crates/arborium-ninja/: build.rs  info.toml
crates/arborium-nix/: build.rs  info.toml
crates/arborium-objc/: build.rs  info.toml
crates/arborium-ocaml/: Cargo.toml  build.rs  info.toml
crates/arborium-perl/: build.rs  info.toml
crates/arborium-php/: build.rs  info.toml
crates/arborium-plugin-runtime/: Cargo.toml
crates/arborium-postscript/: Cargo.toml  build.rs  info.toml
crates/arborium-powershell/: Cargo.toml  build.rs  info.toml
crates/arborium-prolog/: Cargo.toml  build.rs  info.toml
crates/arborium-prolog/src/: lib.rs
crates/arborium-python/: build.rs  info.toml
crates/arborium-query/: Cargo.toml  build.rs  info.toml
crates/arborium-r/: build.rs  info.toml
crates/arborium-rescript/: Cargo.toml  build.rs  info.toml
crates/arborium-ron/: build.rs  info.toml
crates/arborium-ruby/: build.rs  info.toml
crates/arborium-rust/: build.rs  info.toml
crates/arborium-rust-plugin/: Cargo.toml
crates/arborium-rustdoc/: Cargo.stpl.toml  Cargo.toml  README.md
crates/arborium-rustdoc/src/: html.rs  processor.rs
crates/arborium-scala/: build.rs  info.toml
crates/arborium-scheme/: Cargo.toml  build.rs  info.toml
crates/arborium-scss/: build.rs  info.toml
crates/arborium-sparql/: build.rs  info.toml
crates/arborium-sql/: build.rs  info.toml
crates/arborium-ssh-config/: build.rs  info.toml
crates/arborium-starlark/: build.rs  info.toml
crates/arborium-svelte/: build.rs  info.toml
crates/arborium-swift/: Cargo.toml  build.rs  info.toml
crates/arborium-sysroot/: Cargo.toml
crates/arborium-test-harness/: Cargo.toml
crates/arborium-textproto/: build.rs  info.toml
crates/arborium-theme/: Cargo.toml  highlights.toml
crates/arborium-theme/src/: highlights.rs  lib.rs  theme.rs
crates/arborium-thrift/: build.rs  info.toml
crates/arborium-tlaplus/: Cargo.toml  build.rs  info.toml
crates/arborium-tlaplus/src/: lib.rs
crates/arborium-toml/: build.rs  info.toml
crates/arborium-tree-sitter/: Cargo.toml
crates/arborium-tsx/: Cargo.toml  build.rs  info.toml
crates/arborium-typescript/: Cargo.toml  build.rs  info.toml
crates/arborium-typst/: build.rs  info.toml
crates/arborium-vhdl/: Cargo.toml  build.rs  info.toml
crates/arborium-vhdl/src/: lib.rs
crates/arborium/src/: ansi.rs  highlighter.rs  lib.rs  provider.rs  wasm.rs
crates/arborium/tests/: html.rs  language.rs  styx.rs  svelte.rs  vue.rs
demo/: .icon-cache.json  app.js  index.html  language-info.json  plugins.json  registry.json  styles.css  template.html
docs/: samples_todo.md  theme-system.md
langs/: Cargo.toml  plugins.json
tree-sitter-highlight/: README.md
wasm-sysroot/: stdint.h
wit/: grammar.wit
xtask/: Cargo.toml  README.md
(+231 files in other folders)
