[package]
name = "arborium-theme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Theme support for arborium syntax highlighting"
keywords = ["syntax-highlighting", "themes", "tree-sitter"]
categories = ["text-processing"]

[dependencies]
toml = "0.8"
