[package]
name = "arborium"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter syntax highlighting with HTML rendering and WASM support"
keywords = ["tree-sitter", "syntax-highlighting", "wasm"]
categories = ["parsing", "text-processing", "wasm"]
links = "arborium"

[features]
default = []

# All languages (excluding idris which has build issues)
all-languages = [
    "lang-ada", "lang-agda", "lang-asm", "lang-awk",
    "lang-bash", "lang-batch",
    "lang-c", "lang-c-sharp", "lang-caddy", "lang-capnp", "lang-clojure", "lang-cmake", "lang-commonlisp", "lang-cpp", "lang-css",
    "lang-d", "lang-dart", "lang-devicetree", "lang-diff", "lang-dockerfile", "lang-dot",
    "lang-elisp", "lang-elixir", "lang-elm", "lang-erlang",
    "lang-fish", "lang-fsharp",
    "lang-gleam", "lang-glsl", "lang-go", "lang-graphql",
    "lang-haskell", "lang-hcl", "lang-hlsl", "lang-html",
    "lang-ini",
    "lang-java", "lang-javascript", "lang-jinja2", "lang-jq", "lang-json", "lang-julia",
    "lang-kdl", "lang-kotlin",
    "lang-lean", "lang-lua",
    "lang-matlab", "lang-meson",
    "lang-nginx", "lang-ninja", "lang-nix",
    "lang-objc", "lang-ocaml",
    "lang-perl", "lang-php", "lang-powershell", "lang-prolog", "lang-python",
    "lang-query",
    "lang-r", "lang-rescript", "lang-ron", "lang-ruby", "lang-rust",
    "lang-scala", "lang-scheme", "lang-scss", "lang-sparql", "lang-sql", "lang-ssh-config", "lang-starlark", "lang-svelte", "lang-swift",
    "lang-textproto", "lang-thrift", "lang-tlaplus", "lang-toml", "lang-tsx", "lang-typescript", "lang-typst",
    "lang-uiua",
    "lang-vb", "lang-verilog", "lang-vhdl", "lang-vue",
    # "lang-vim", # excluded - slow to compile (4.6MB parser.c)
    "lang-x86asm", "lang-xml",
    "lang-yaml", "lang-yuri",
    "lang-zig",
    # "lang-zsh", # excluded - grammar is incomplete/experimental
]

# Individual language features
lang-ada = ["dep:arborium-ada"]
lang-agda = ["dep:arborium-agda"]
lang-asm = ["dep:arborium-asm"]
lang-awk = ["dep:arborium-awk"]
lang-bash = ["dep:arborium-bash"]
lang-batch = ["dep:arborium-batch"]
lang-c = ["dep:arborium-c"]
lang-c-sharp = ["dep:arborium-c-sharp"]
lang-caddy = ["dep:arborium-caddy"]
lang-capnp = ["dep:arborium-capnp"]
lang-clojure = ["dep:arborium-clojure"]
lang-cmake = ["dep:arborium-cmake"]
lang-commonlisp = ["dep:arborium-commonlisp"]
lang-cpp = ["dep:arborium-cpp"]
lang-css = ["dep:arborium-css"]
lang-d = ["dep:arborium-d"]
lang-dart = ["dep:arborium-dart"]
lang-devicetree = ["dep:arborium-devicetree"]
lang-diff = ["dep:arborium-diff"]
lang-dockerfile = ["dep:arborium-dockerfile"]
lang-dot = ["dep:arborium-dot"]
lang-elisp = ["dep:arborium-elisp"]
lang-elixir = ["dep:arborium-elixir"]
lang-elm = ["dep:arborium-elm"]
lang-erlang = ["dep:arborium-erlang"]
lang-fish = ["dep:arborium-fish"]
lang-fsharp = ["dep:arborium-fsharp"]
lang-gleam = ["dep:arborium-gleam"]
lang-glsl = ["dep:arborium-glsl"]
lang-go = ["dep:arborium-go"]
lang-graphql = ["dep:arborium-graphql"]
lang-haskell = ["dep:arborium-haskell"]
lang-hcl = ["dep:arborium-hcl"]
lang-hlsl = ["dep:arborium-hlsl"]
lang-html = ["dep:arborium-html", "lang-css", "lang-javascript"]
lang-idris = ["dep:arborium-idris"]
lang-ini = ["dep:arborium-ini"]
lang-java = ["dep:arborium-java"]
lang-javascript = ["dep:arborium-javascript"]
lang-jinja2 = ["dep:arborium-jinja2"]
lang-jq = ["dep:arborium-jq"]
lang-json = ["dep:arborium-json"]
lang-julia = ["dep:arborium-julia"]
lang-kdl = ["dep:arborium-kdl"]
lang-kotlin = ["dep:arborium-kotlin"]
lang-lean = ["dep:arborium-lean"]
lang-lua = ["dep:arborium-lua"]
lang-matlab = ["dep:arborium-matlab"]
lang-meson = ["dep:arborium-meson"]
lang-nginx = ["dep:arborium-nginx"]
lang-ninja = ["dep:arborium-ninja"]
lang-nix = ["dep:arborium-nix"]
lang-objc = ["dep:arborium-objc"]
lang-ocaml = ["dep:arborium-ocaml"]
lang-perl = ["dep:arborium-perl"]
lang-php = ["dep:arborium-php"]
lang-powershell = ["dep:arborium-powershell"]
lang-prolog = ["dep:arborium-prolog"]
lang-python = ["dep:arborium-python"]
lang-query = ["dep:arborium-query"]
lang-r = ["dep:arborium-r"]
lang-rescript = ["dep:arborium-rescript"]
lang-ron = ["dep:arborium-ron"]
lang-ruby = ["dep:arborium-ruby"]
lang-rust = ["dep:arborium-rust"]
lang-scala = ["dep:arborium-scala"]
lang-scheme = ["dep:arborium-scheme"]
lang-scss = ["dep:arborium-scss"]
lang-sparql = ["dep:arborium-sparql"]
lang-sql = ["dep:arborium-sql"]
lang-ssh-config = ["dep:arborium-ssh-config"]
lang-starlark = ["dep:arborium-starlark"]
lang-svelte = ["dep:arborium-svelte", "lang-javascript", "lang-css", "lang-typescript"]
lang-swift = ["dep:arborium-swift"]
lang-textproto = ["dep:arborium-textproto"]
lang-thrift = ["dep:arborium-thrift"]
lang-tlaplus = ["dep:arborium-tlaplus"]
lang-toml = ["dep:arborium-toml"]
lang-tsx = ["dep:arborium-tsx"]
lang-typescript = ["dep:arborium-typescript"]
lang-typst = ["dep:arborium-typst"]
lang-uiua = ["dep:arborium-uiua"]
lang-vb = ["dep:arborium-vb"]
lang-verilog = ["dep:arborium-verilog"]
lang-vhdl = ["dep:arborium-vhdl"]
lang-vim = ["dep:arborium-vim"]
lang-vue = ["dep:arborium-vue", "lang-javascript", "lang-css", "lang-typescript"]
lang-x86asm = ["dep:arborium-x86asm"]
lang-xml = ["dep:arborium-xml"]
lang-yaml = ["dep:arborium-yaml"]
lang-yuri = ["dep:arborium-yuri"]
lang-zig = ["dep:arborium-zig"]
lang-zsh = ["dep:arborium-zsh"]

[dependencies]
tree-sitter-patched-arborium = { version = "0.25.10", path = "../../tree-sitter" }
tree-sitter-highlight-patched-arborium = { version = "0.25.10", path = "../../tree-sitter-highlight" }
toml = "0.8"

# WASM allocator (automatically enabled on wasm targets)
[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = "0.2"

# Optional grammar dependencies
[dependencies.arborium-ada]
path = "../arborium-ada"
version = "0.1.0"
optional = true

[dependencies.arborium-agda]
path = "../arborium-agda"
version = "0.1.0"
optional = true

[dependencies.arborium-asm]
path = "../arborium-asm"
version = "0.1.0"
optional = true

[dependencies.arborium-awk]
path = "../arborium-awk"
version = "0.1.0"
optional = true

[dependencies.arborium-bash]
path = "../arborium-bash"
version = "0.1.0"
optional = true

[dependencies.arborium-batch]
path = "../arborium-batch"
version = "0.1.0"
optional = true

[dependencies.arborium-c]
path = "../arborium-c"
version = "0.1.0"
optional = true

[dependencies.arborium-c-sharp]
path = "../arborium-c-sharp"
version = "0.1.0"
optional = true

[dependencies.arborium-caddy]
path = "../arborium-caddy"
version = "0.1.0"
optional = true

[dependencies.arborium-capnp]
path = "../arborium-capnp"
version = "0.1.0"
optional = true

[dependencies.arborium-clojure]
path = "../arborium-clojure"
version = "0.1.0"
optional = true

[dependencies.arborium-cmake]
path = "../arborium-cmake"
version = "0.1.0"
optional = true

[dependencies.arborium-commonlisp]
path = "../arborium-commonlisp"
version = "0.1.0"
optional = true

[dependencies.arborium-cpp]
path = "../arborium-cpp"
version = "0.1.0"
optional = true

[dependencies.arborium-css]
path = "../arborium-css"
version = "0.1.0"
optional = true

[dependencies.arborium-d]
path = "../arborium-d"
version = "0.1.0"
optional = true

[dependencies.arborium-dart]
path = "../arborium-dart"
version = "0.1.0"
optional = true

[dependencies.arborium-devicetree]
path = "../arborium-devicetree"
version = "0.1.0"
optional = true

[dependencies.arborium-diff]
path = "../arborium-diff"
version = "0.1.0"
optional = true

[dependencies.arborium-dockerfile]
path = "../arborium-dockerfile"
version = "0.1.0"
optional = true

[dependencies.arborium-dot]
path = "../arborium-dot"
version = "0.1.0"
optional = true

[dependencies.arborium-elisp]
path = "../arborium-elisp"
version = "0.1.0"
optional = true

[dependencies.arborium-elixir]
path = "../arborium-elixir"
version = "0.1.0"
optional = true

[dependencies.arborium-elm]
path = "../arborium-elm"
version = "0.1.0"
optional = true

[dependencies.arborium-erlang]
path = "../arborium-erlang"
version = "0.1.0"
optional = true

[dependencies.arborium-fish]
path = "../arborium-fish"
version = "0.1.0"
optional = true

[dependencies.arborium-fsharp]
path = "../arborium-fsharp"
version = "0.1.0"
optional = true

[dependencies.arborium-gleam]
path = "../arborium-gleam"
version = "0.1.0"
optional = true

[dependencies.arborium-glsl]
path = "../arborium-glsl"
version = "0.1.0"
optional = true

[dependencies.arborium-go]
path = "../arborium-go"
version = "0.1.0"
optional = true

[dependencies.arborium-graphql]
path = "../arborium-graphql"
version = "0.1.0"
optional = true

[dependencies.arborium-haskell]
path = "../arborium-haskell"
version = "0.1.0"
optional = true

[dependencies.arborium-hcl]
path = "../arborium-hcl"
version = "0.1.0"
optional = true

[dependencies.arborium-hlsl]
path = "../arborium-hlsl"
version = "0.1.0"
optional = true

[dependencies.arborium-html]
path = "../arborium-html"
version = "0.1.0"
optional = true

[dependencies.arborium-idris]
path = "../arborium-idris"
version = "0.1.0"
optional = true

[dependencies.arborium-ini]
path = "../arborium-ini"
version = "0.1.0"
optional = true

[dependencies.arborium-java]
path = "../arborium-java"
version = "0.1.0"
optional = true

[dependencies.arborium-javascript]
path = "../arborium-javascript"
version = "0.1.0"
optional = true

[dependencies.arborium-jinja2]
path = "../arborium-jinja2"
version = "0.1.0"
optional = true

[dependencies.arborium-jq]
path = "../arborium-jq"
version = "0.1.0"
optional = true

[dependencies.arborium-json]
path = "../arborium-json"
version = "0.1.0"
optional = true

[dependencies.arborium-julia]
path = "../arborium-julia"
version = "0.1.0"
optional = true

[dependencies.arborium-kdl]
path = "../arborium-kdl"
version = "0.1.0"
optional = true

[dependencies.arborium-kotlin]
path = "../arborium-kotlin"
version = "0.1.0"
optional = true

[dependencies.arborium-lean]
path = "../arborium-lean"
version = "0.1.0"
optional = true

[dependencies.arborium-lua]
path = "../arborium-lua"
version = "0.1.0"
optional = true

[dependencies.arborium-matlab]
path = "../arborium-matlab"
version = "0.1.0"
optional = true

[dependencies.arborium-meson]
path = "../arborium-meson"
version = "0.1.0"
optional = true

[dependencies.arborium-nginx]
path = "../arborium-nginx"
version = "0.1.0"
optional = true

[dependencies.arborium-ninja]
path = "../arborium-ninja"
version = "0.1.0"
optional = true

[dependencies.arborium-nix]
path = "../arborium-nix"
version = "0.1.0"
optional = true

[dependencies.arborium-objc]
path = "../arborium-objc"
version = "0.1.0"
optional = true

[dependencies.arborium-ocaml]
path = "../arborium-ocaml"
version = "0.1.0"
optional = true

[dependencies.arborium-perl]
path = "../arborium-perl"
version = "0.1.0"
optional = true

[dependencies.arborium-php]
path = "../arborium-php"
version = "0.1.0"
optional = true

[dependencies.arborium-powershell]
path = "../arborium-powershell"
version = "0.1.0"
optional = true

[dependencies.arborium-prolog]
path = "../arborium-prolog"
version = "0.1.0"
optional = true

[dependencies.arborium-python]
path = "../arborium-python"
version = "0.1.0"
optional = true

[dependencies.arborium-query]
path = "../arborium-query"
version = "0.1.0"
optional = true

[dependencies.arborium-r]
path = "../arborium-r"
version = "0.1.0"
optional = true

[dependencies.arborium-rescript]
path = "../arborium-rescript"
version = "0.1.0"
optional = true

[dependencies.arborium-ron]
path = "../arborium-ron"
version = "0.1.0"
optional = true

[dependencies.arborium-ruby]
path = "../arborium-ruby"
version = "0.1.0"
optional = true

[dependencies.arborium-rust]
path = "../arborium-rust"
version = "0.1.0"
optional = true

[dependencies.arborium-scala]
path = "../arborium-scala"
version = "0.1.0"
optional = true

[dependencies.arborium-scheme]
path = "../arborium-scheme"
version = "0.1.0"
optional = true

[dependencies.arborium-scss]
path = "../arborium-scss"
version = "0.1.0"
optional = true

[dependencies.arborium-sparql]
path = "../arborium-sparql"
version = "0.1.0"
optional = true

[dependencies.arborium-sql]
path = "../arborium-sql"
version = "0.1.0"
optional = true

[dependencies.arborium-ssh-config]
path = "../arborium-ssh-config"
version = "0.1.0"
optional = true

[dependencies.arborium-starlark]
path = "../arborium-starlark"
version = "0.1.0"
optional = true

[dependencies.arborium-svelte]
path = "../arborium-svelte"
version = "0.1.0"
optional = true

[dependencies.arborium-swift]
path = "../arborium-swift"
version = "0.1.0"
optional = true

[dependencies.arborium-textproto]
path = "../arborium-textproto"
version = "0.1.0"
optional = true

[dependencies.arborium-thrift]
path = "../arborium-thrift"
version = "0.1.0"
optional = true

[dependencies.arborium-tlaplus]
path = "../arborium-tlaplus"
version = "0.1.0"
optional = true

[dependencies.arborium-toml]
path = "../arborium-toml"
version = "0.1.0"
optional = true

[dependencies.arborium-tsx]
path = "../arborium-tsx"
version = "0.1.0"
optional = true

[dependencies.arborium-typescript]
path = "../arborium-typescript"
version = "0.1.0"
optional = true

[dependencies.arborium-typst]
path = "../arborium-typst"
version = "0.1.0"
optional = true

[dependencies.arborium-uiua]
path = "../arborium-uiua"
version = "0.1.0"
optional = true

[dependencies.arborium-vb]
path = "../arborium-vb"
version = "0.1.0"
optional = true

[dependencies.arborium-verilog]
path = "../arborium-verilog"
version = "0.1.0"
optional = true

[dependencies.arborium-vhdl]
path = "../arborium-vhdl"
version = "0.1.0"
optional = true

[dependencies.arborium-vim]
path = "../arborium-vim"
version = "0.1.0"
optional = true

[dependencies.arborium-vue]
path = "../arborium-vue"
version = "0.1.0"
optional = true

[dependencies.arborium-x86asm]
path = "../arborium-x86asm"
version = "0.1.0"
optional = true

[dependencies.arborium-xml]
path = "../arborium-xml"
version = "0.1.0"
optional = true

[dependencies.arborium-yaml]
path = "../arborium-yaml"
version = "0.1.0"
optional = true

[dependencies.arborium-yuri]
path = "../arborium-yuri"
version = "0.1.0"
optional = true

[dependencies.arborium-zig]
path = "../arborium-zig"
version = "0.1.0"
optional = true

[dependencies.arborium-zsh]
path = "../arborium-zsh"
version = "0.1.0"
optional = true

[dev-dependencies]
indoc = "2"
